<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary_bg"
    android:padding="24dp">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_error"
        android:contentDescription="@string/error_icon_desc"
        tools:ignore="ContentDescription"/>

    <Button
        android:id="@+id/retryButton"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/retry_button" />
    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/network_error_message"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />
</LinearLayout>